--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "trgino/react-fiber",
     "description": "ReactPHP Fiber PHP 8.1 +",
     "license": "MIT",
+	"version": "0.1",
     "require": {
         "php": ">=8.1",
         "react/event-loop": "^1",
